# interbase

./: AGENTS.md  CLAUDE.md  README.md  install.sh
.clavain/interspect/: interspect.db
.github/: dependabot.yml
.github/workflows/: ci.yml
agents/: adoption.md  bash-sdk.md  conformance-tests.md  design-patterns.md  go-sdk.md  python-sdk.md
docs/: interbase-roadmap.md  migration-guide.md  roadmap.md  vision.md
go/: README.md  conformance_test.go  go.mod  interbase.go  interbase_test.go
go/mcputil/: instrument.go  instrument_test.go
go/toolerror/: toolerror.go  toolerror_test.go
lib/: interbase.sh  interkasten-db.sh
python/: pyproject.toml
python/interbase/: __init__.py  actions.py  config.py  guards.py  mcputil.py  nudge.py  toolerror.py
python/tests/: test_actions.py  test_config.py  test_conformance.py  test_guards.py  test_mcputil.py  test_toolerror.py
spec/: interbase-spec.md
templates/: integration.json  interbase-stub.sh
tests/: test-config.sh  test-guards.sh  test-nudge.sh
tests/conformance/: actions.yaml  config.yaml  guards.yaml  mcp.yaml
tests/runners/: run_bash.sh  run_go.sh  run_python.sh
